--- a/LimCheeYung_main.html
+++ b/LimCheeYung_main.html
@@ -29,7 +29,7 @@
 		<button>Lab1.3</button>
 	</a>
 <br>
-	<a href="LimCheeYung_Main.html">
+	<a href="LimCheeYung_main.html">
 	<button>Home</button>
 	</a>
 	<a href="Lab2.1.html">
