--- a/Lab2.1.html
+++ b/Lab2.1.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-	<a href="LimCheeYung_Main.html">
+	<a href="LimCheeYung_main.html">
         <button>Home</button>
         </a>
         <a href="Lab2.1.html">
