--- a/Lab1.1.html
+++ b/Lab1.1.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-	<a href="LimCheeYung_Main.html">
+	<a href="LimCheeYung_main.html">
         <button>Home</button>
         </a>
 	<a href="Lab1.1.html">
