--- a/LimCheeYung_main.html
+++ b/LimCheeYung_main.html
@@ -44,6 +44,13 @@
 	<a href="Lab2.4.html">
 		<button>Lab2.4</button>
 	</a>
+<br>
+	<a href="Lab3.1.html">
+        <button>Lab3.1</button>
+   	 </a>
+   	 <a href="Lab3.2.html">
+        <button>Lab3.2</button>
+    </a>
 	<footer>COS30045 Data Visualisation</footer>
 
 </body>
