--- a/LimCheeYung_main.html
+++ b/LimCheeYung_main.html
@@ -29,7 +29,7 @@
 		<button>Lab1.3</button>
 	</a>
 <br>
-	<a href="LimCheeYung_main.html">
+	<a href="LimCheeYung_Main.html">
 	<button>Home</button>
 	</a>
 	<a href="Lab2.1.html">
@@ -45,13 +45,23 @@
 		<button>Lab2.4</button>
 	</a>
 <br>
-	<a href="Lab3.1.html">
-        <button>Lab3.1</button>
-   	 </a>
-   	 <a href="Lab3.2.html">
-        <button>Lab3.2</button>
-    </a>
-	<footer>COS30045 Data Visualisation</footer>
+<a href="Lab3.1.html">
+	<button>Lab3.1</button>
+</a>
+<a href="Lab3.2.html">
+	<button>Lab3.2</button>
+</a>
+<br>
+<a href="Lab5.1.html">
+	<button>Lab5.1</button>
+</a>
+<a href="Lab5.2.html">
+	<button>Lab5.2</button>
+</a>
+<a href="Lab5.3.html">
+	<button>Lab5.3</button>
+</a>
+	<footer>COS30045 Data Visualisation by Lim Chee Yung</footer>
 
 </body>
 </html>
