--- a/LimCheeYung_main.html
+++ b/LimCheeYung_main.html
@@ -61,6 +61,13 @@
 <a href="Lab5.3.html">
 	<button>Lab5.3</button>
 </a>
+<br>
+    <a href="Lab6.1.html">
+        <button>Lab6.1</button>
+    </a>
+    <a href="Lab6.2.html">
+        <button>Lab6.2</button>
+    </a>
 	<footer>COS30045 Data Visualisation by Lim Chee Yung</footer>
 
 </body>
