--- a/LimCheeYung_main.html
+++ b/LimCheeYung_main.html
@@ -19,55 +19,29 @@
 </head>
 
 <body>
-	<a href="Lab1.1.html">
-		<button>Lab1.1</button>
-	</a>
-	<a href="Lab1.2.html">
-		<button>Lab1.2</button>
-	</a>
-	<a href="Lab1.3.html">
-		<button>Lab1.3</button>
-	</a>
-<br>
-	<a href="LimCheeYung_Main.html">
-	<button>Home</button>
-	</a>
-	<a href="Lab2.1.html">
-		<button>Lab2.1</button>
-	</a>
-	<a href="Lab2.2.html">
-		<button>Lab2.2</button>
-	</a>
-	<a href="Lab2.3.html">
-		<button>Lab2.3</button>
-	</a>
-	<a href="Lab2.4.html">
-		<button>Lab2.4</button>
-	</a>
-<br>
-<a href="Lab3.1.html">
-	<button>Lab3.1</button>
-</a>
-<a href="Lab3.2.html">
-	<button>Lab3.2</button>
-</a>
-<br>
-<a href="Lab5.1.html">
-	<button>Lab5.1</button>
-</a>
-<a href="Lab5.2.html">
-	<button>Lab5.2</button>
-</a>
-<a href="Lab5.3.html">
-	<button>Lab5.3</button>
-</a>
-<br>
-    <a href="Lab6.1.html">
-        <button>Lab6.1</button>
-    </a>
-    <a href="Lab6.2.html">
-        <button>Lab6.2</button>
-    </a>
+	<div class="nav-container">
+		<a href="LimCheeYung_Main.html"><button>Home</button></a>
+		<br>
+		<a href="Lab1.1.html"><button>Lab1.1</button></a>
+		<a href="Lab1.2.html"><button>Lab1.2</button></a>
+		<a href="Lab1.3.html"><button>Lab1.3</button></a>
+		<br>
+		<a href="LimCheeYung_Main.html"><button>Home</button></a>
+		<a href="Lab2.1.html"><button>Lab2.1</button></a>
+		<a href="Lab2.2.html"><button>Lab2.2</button></a>
+		<a href="Lab2.3.html"><button>Lab2.3</button></a>
+		<a href="Lab2.4.html"><button>Lab2.4</button></a>
+		<br>
+		<a href="Lab3.1.html"><button>Lab3.1</button></a>
+		<a href="Lab3.2.html"><button>Lab3.2</button></a>
+		<br>
+		<a href="Lab5.1.html"><button>Lab5.1</button></a>
+		<a href="Lab5.2.html"><button>Lab5.2</button></a>
+		<a href="Lab5.3.html"><button>Lab5.3</button></a>
+		<br>
+		<a href="Lab6.1.html"><button>Lab6.1</button></a>
+		<a href="Lab6.2.html"><button>Lab6.2</button></a>
+	</div>
 	<footer>COS30045 Data Visualisation by Lim Chee Yung</footer>
 
 </body>
