--- a/LimCheeYung_main.html
+++ b/LimCheeYung_main.html
@@ -12,8 +12,7 @@
 	<!--Insert description of exercise  -->
 
 	<style>
-
-
+	body{	text-align: center; /* Centering all content */}
 	</style>
 
 </head>
