--- a/LimCheeYung_main.html
+++ b/LimCheeYung_main.html
@@ -39,6 +39,10 @@
 		<br>
 		<a href="Lab6.1.html"><button class="main-button">Lab 6.1</button></a>
 		<a href="Lab6.2.html"><button class="main-button">Lab 6.2</button></a>
+		<br>
+		<a href="Lab7.1.html"><button class="main-button">Lab 7.1</button></a>
+		<a href="Lab7.2.html"><button class="main-button">Lab 7.2</button></a>
+		<a href="Lab7.3.html"><button class="main-button">Lab 7.3</button></a>
 	</div>
 	<footer>COS30045 Data Visualisation by Lim Chee Yung</footer>
 
