--- a/LimCheeYung_main.html
+++ b/LimCheeYung_main.html
@@ -43,6 +43,10 @@
 		<a href="Lab7.1.html"><button class="main-button">Lab 7.1</button></a>
 		<a href="Lab7.2.html"><button class="main-button">Lab 7.2</button></a>
 		<a href="Lab7.3.html"><button class="main-button">Lab 7.3</button></a>
+		<br>
+		<a href="Lab8.1.html"><button class="main-button">Lab 8.1</button></a>
+		<a href="Lab8.2.html"><button class="main-button">Lab 8.2</button></a>
+		<br>
 	</div>
 	<footer>COS30045 Data Visualisation by Lim Chee Yung</footer>
 
