--- a/Lab8.2.html
+++ b/Lab8.2.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<a href="LimCheeYung_Main.html">
+	<a href="LimCheeYung_main.html">
         <button>Home</button>
         </a>
         <a href="Lab8.1.html">
