--- a/Lab7.3.html
+++ b/Lab7.3.html
@@ -32,7 +32,7 @@
 
 	<h1>Stacked Bar Chart</h1>
 	<h2></h2>
-
+<mark>Add Legend tob the Stacked Bar Chart</mark>
     <p id="stack_bar"></p>
 	<script src="Lab7.3.js"></script>
 
